Web/public/stylesheets/respon-nav.css
nav
{
    display:block;
}
nav ol,nav ul
{
    list-style:none;
    margin:0;
    padding:0;
}

.nav-collapse.disable-pointer-events
{
    pointer-events:none !important;
}
.nav-collapse
{
    z-index:1;
    font-family:"proxima-nova-extra-condensed",sans-serif
}
.nav-collapse,.nav-collapse *
{
    -webkit-box-sizing:border-box;
    -moz-box-sizing:border-box;
    box-sizing:border-box
}

.nav-collapse,.nav-collapse ul
{
    margin:0;
    padding:0;
    list-style:none;
    width:100%;
  /*  float:left */

}

@media screen and (min-width:46.25em)
{
    .nav-collapse,.nav-collapse ul
    {
        text-align:center
    }
}

.nav-collapse li
{
 /*   float:left; */
    width:100%;
    display:block
}

@media screen and (min-width:46.25em)
{
    .nav-collapse li
    {
        float:none;
        display:inline-block;
        *display:block;
        *float:left;
        width:auto;
        margin-left:.4em;
        margin-right:.2em
    }
}

.nav-collapse a
{
    text-transform:uppercase;
    font-weight:400;
    font-size:112.5%;
    letter-spacing:2px;
    color:white;
    text-decoration:none;
    width:100%;
    background:#4e9a06;
    border-bottom:1px solid white;
    padding:.5em 1em;
/*    float:left */
}
.nav-collapse a:focus
{
    background:#306004;
    outline:none
}

@media screen and (min-width:46.25em)
{
    .nav-collapse a
    {
        _float:none;
        -webkit-font-smoothing:antialiased;
        margin:0;
        padding:1.96em .7em .5em;
        font-size:1.1em;
        background:transparent;
        color:#37302a;
        border:0;
        -webkit-transition:background .5s ease;
        -moz-transition:background .5s ease;
        -o-transition:background .5s ease;
        transition:background .5s ease
    }
    .nav-collapse a:hover,.nav-collapse a:focus
    {
        background:#4E9A06;
        color:white;
    }
}
@media screen and (min-width:46.25em)
{
    .nav-collapse .active a
    {
        -webkit-font-smoothing:subpixel-antialiased;
        color:white;
        background:#306004
    }
    .nav-collapse .active a:hover
    {
        text-decoration:none
    }
    .nav-collapse .active a:focus
    {
        background:#306004
    }
}
.js .nav-collapse
{
    clip:rect(0 0 0 0);
    max-height:0;
    position:absolute;
    display:block;
    overflow:hidden
}
@media screen and (min-width:46.25em)
{
    .js .nav-collapse
    {
        position:relative !important;
        max-height:none
    }
}

.nav-collapse.opened
{
    max-height:9999px
}
.nav-toggle
{
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
    width:70px;
    height:55px;
    float:right;
    text-indent:-9999px;
    overflow:hidden;
    display:block;
    background:#f43c12 url("../images/hamburger.gif") no-repeat 50% 33%
}
@media screen and (-webkit-min-device-pixel-ratio:1.3),screen and (min--moz-device-pixel-ratio:1.3),screen and (-o-min-device-pixel-ratio:2 / 1),screen and (min-device-pixel-ratio:1.3),screen and (min-resolution:192dpi),screen and (min-resolution:2dppx)
{
    .nav-toggle
    {
        background-image:url("../images/hamburger-retina.gif");
        -webkit-background-size:100px 100px !important;
        -moz-background-size:100px 100px !important;
        -o-background-size:100px 100px !important;
        background-size:100px 100px !important
    }
}
@media screen and (min-width:46.25em)
{
    .nav-toggle
    {
        display:none
    }
}

